# esphome-bspool-chlorinator

./: AGENTS.md  README.md  example.yaml
.github/workflows/: ci.yml  tests.yml
PCB/: README.md
components/bs_pool/: AGENTS.md  bs_pool.cpp  bs_pool.h
components/bs_pool/binary_sensor/: __init__.py  bs_pool_binary_sensor.cpp
components/bs_pool/select/: __init__.py  bs_pool_select.cpp  control_mode_select.cpp
components/bs_pool/sensor/: bs_pool_sensor.cpp
components/bs_pool/switch/: bs_pool_switch.cpp  bs_pool_switch.h  user_settings.cpp
components/bs_pool/text_sensor/: __init__.py
docs/: serial-protocol.md
esphome/components/bs_pool/: __init__.py  bs_pool.cpp  bs_pool.h
esphome/components/bs_pool/binary_sensor/: bs_pool_binary_sensor.h
esphome/components/bs_pool/select/: bs_pool_select.h  control_mode_select.h
esphome/components/bs_pool/sensor/: __init__.py  bs_pool_sensor.cpp  bs_pool_sensor.h
tests/components/bs_pool/: common.yaml  test.esp8266-ard.yaml
tests/integration/: pty_harness.cpp  smoke_test.py
tests/unit/: CMakeLists.txt  common.h  data_decoding_test.cpp  handle_message_test.cpp  hub_test.cpp  main.cpp  smoke_test.cpp
tests/unit/stubs/esphome/components/binary_sensor/: binary_sensor.h
tests/unit/stubs/esphome/components/select/: select.h
tests/unit/stubs/esphome/components/sensor/: sensor.h
tests/unit/stubs/esphome/components/switch/: switch.h
tests/unit/stubs/esphome/components/text_sensor/: text_sensor.h
tests/unit/stubs/esphome/components/uart/: uart.h
tests/unit/stubs/esphome/core/: component.h  entity_base.h  helpers.h  log.h
(+6 files in other folders)
